--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -23,13 +23,16 @@
 </header>
 <body>
 <div class="container-fluid">
-    <h2 class="entertext"> Given Text </h2>
-    <p>{% placeholder "giventext" %}<p>
+    <h2 class="entertext"> Source Text </h2>
+    <p>A team of physicists at a university in the Netherlands have 3D-printed a microscopic version of the USS Voyager, an Intrepid-class starship from Star Trek.
+
+The miniature Voyager, which measures 15 micrometers (0.015 millimeters) long, is part of a project researchers at Leiden University conducted to understand how shape affects the motion and interactions of microswimmers.
+Microswimmers are small particles that can move through liquid on their own by interacting with their environment through chemical reactions. The platinum coating on the microswimmers reacts to a hydrogen peroxide solution they are placed in, and that propels them through the liquid.<p>
 </div>
 <div class="container-fluid">
     <h2 class="entertext">
         Rewrite the given text but with the following characteristics:
-        {% placeholder "trait1" %}, {% placeholder "trait2" %}, {% placeholder "trait3" %}
+         40% Audience Approriate-ness: Medium,  40% Neutrality: Neutral, 20% Accuracy
     </h2>
     <div class="form-group">
         <label for="answer">Answer:</label>
