--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -32,7 +32,7 @@ Microswimmers are small particles that can move through liquid on their own by i
 <div class="container-fluid">
     <h2 class="entertext">
         Rewrite the given text but with the following characteristics:
-         40% Audience Approriate-ness: Medium,  40% Neutrality: Neutral, 20% Accuracy
+         30% Audience Approriate-ness: Medium,  30% Neutrality: Neutral, 20% Accuracy, 20% Plagiarism
     </h2>
     <div class="form-group">
         <label for="answer">Answer:</label>
