--- a/main/templates/main/user.html
+++ b/main/templates/main/user.html
@@ -25,6 +25,13 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+            <h2 class="entertext">Enter Room Code</h2>
+            <h3>Enter your desired room code</h3>
+            <form>
+                <input class="form-control form-control-lg" type="text" placeholder="room code">
+            </form>
+        </div>
+        <div class="col-sm-12">
             <h2 class="entertext">Enter Username</h2>
             <h3>Enter a new username or an existing one if you already have one.</h3>
             <form>
