--- a/main/templates/main/leaderboard.html
+++ b/main/templates/main/leaderboard.html
@@ -1,7 +1,10 @@
+<h1>Leaderboard</h1>>
 {% if users %}
     <ul>
     {% for user in users %}
-        <li><a href="/main/{{ user.username }}/">{{ user.score }}</a></li>
+        {{ user.username }}
+        {{ user.score }}
+        <br>
     {% endfor %}
     </ul>
 {% else %}
